# advent_of_code

./: .gitignore  Cargo.toml  LICENSE  Package.swift  README.md  Truss.NickAoc2020.sln  aoc_2019  day1.exs  day1.jl  day10.jl  day11.jl  day12.jl  day13.jl  day14.jl  day15.jl  day16.jl  day18.jl  day19.jl  day2.jl  day20.jl  day21.jl  day3.jl  day4.jl  day5.jl  day6.jl  day7.jl  day8.jl  day9.jl  mix.exs
2019/: .gitignore  LICENSE  README.md  cli.exs  mix.exs
2019/lib/: IntComp.ex  day1.ex  day10.ex  day11.ex  day12.ex  day13.ex  day3.ex  day4.ex  day5.ex  day6.ex  day7.ex  day8.ex  day9.ex
2020/: README.md  Truss.NickAoc2020.sln
2020/cli/: cli.fs  (+16 more)
2021/: .gitignore  README.md  day11.jl  day12.jl  day13.jl  day15.jl  day16.jl  day17.jl  day18.jl  day19.jl  day2.jl  day21.jl  day22.jl  day3.jl  day4.jl  day6.jl  day7.jl  day8.jl
2022/: Cargo.toml  README.md
2022/src/days/: day1.rs  day10.rs  day11.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  mod.rs
2023/: LICENSE
2024/: day1  day1.nim
2025/: aoc.py  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py
Sources/: aoc.swift  day.swift  day1.swift  day3.swift  day4.swift
cli/: Cli.fsproj  cli.fs  day11.fs  day12.fs  day14.fs  day15.fs  day16.fs  day17.fs  day4.fs  day5.fs  day9.fs  types.fs
cli.Tests/: cli.Tests.fsproj
lib/: IntComp.ex  day1.ex  day10.ex  day13.ex  day2.ex  day3.ex  day4.ex  day5.ex  day7.ex  day8.ex  files.ex
src/: main.rs
test/: IntComp_test.exs  day10_test.exs  day1_test.exs  day2_test.exs  day3_test.exs  day4_test.exs  day5_test.exs  day7_test.exs
(+40 files in other folders)
