[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
itertools = { version = "0.11.0", features = [] }
scanf = "1.2.1"
log = "0.4.20"
num-bigint = { version = "0.4.4", features = [] }
num-traits = "0.2.17"